Bug 448886 - Orange rectangle around non changed input field
Summary: Orange rectangle around non changed input field
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kwinscreenedges (other bugs)
Version First Reported In: 5.23.90
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-21 14:25 UTC by postix
Modified: 2022-01-21 20:23 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments
Screenshot (346.05 KB, image/png)
2022-01-21 14:25 UTC, postix
Details

Note You need to log in before you can comment on or make changes to this bug.
Description postix 2022-01-21 14:25:04 UTC
Created attachment 145704 [details]
Screenshot

SUMMARY

Please see the screenshot.

STEPS TO REPRODUCE
1. Enable "Highlight changed settings"
2. Go to the KCM

OBSERVED RESULT
Though not and never changed, there's an orange outline.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE Neon Testing
KDE Plasma Version: 5.23.90
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION
Wayland
Comment 1 Bug Janitor Service 2022-01-21 19:59:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1928
Comment 2 Nate Graham 2022-01-21 20:21:45 UTC
Git commit 58a83586367c9e47ca32be590941fbf235fd8b9c by Nate Graham, on behalf of Ismael Asensio.
Committed on 21/01/2022 at 20:21.
Pushed by ngraham into branch 'master'.

kcm/screenedges: Fix default indicator for corner ratio

When setting the default value for `ElectricCornerRatio` in the UI form
we also need to update the default indicator for this field.

*Default value for this setting is 25%*
| BEFORE | AFTER |
|---|---|
|![screenedges_25_before](/uploads/2e9f21627cc05cd12fd45ec1a019b89e/screenedges_25_before.png)|![screenedges_25_after](/uploads/7106341983e4cce0a4fb26000fb8583f/screenedges_25_after.png)|
FIXED-IN: 5.24

M  +1    -0    src/kcmkwin/kwinscreenedges/kwinscreenedgeconfigform.cpp

https://invent.kde.org/plasma/kwin/commit/58a83586367c9e47ca32be590941fbf235fd8b9c
Comment 3 Nate Graham 2022-01-21 20:23:08 UTC
Git commit 8563e4f69b5809935a6545605a2283ea7cabbb0d by Nate Graham, on behalf of Ismael Asensio.
Committed on 21/01/2022 at 20:23.
Pushed by ngraham into branch 'Plasma/5.24'.

kcm/screenedges: Fix default indicator for corner ratio

When setting the default value for `ElectricCornerRatio` in the UI form
we also need to update the default indicator for this field.

*Default value for this setting is 25%*
| BEFORE | AFTER |
|---|---|
|![screenedges_25_before](/uploads/2e9f21627cc05cd12fd45ec1a019b89e/screenedges_25_before.png)|![screenedges_25_after](/uploads/7106341983e4cce0a4fb26000fb8583f/screenedges_25_after.png)|
FIXED-IN: 5.24


(cherry picked from commit 58a83586367c9e47ca32be590941fbf235fd8b9c)

M  +1    -0    src/kcmkwin/kwinscreenedges/kwinscreenedgeconfigform.cpp

https://invent.kde.org/plasma/kwin/commit/8563e4f69b5809935a6545605a2283ea7cabbb0d