fix: update default indicator for corner ratio

When setting the default value for `ElectricCornerRatio` in the UI form
we also need to update the default indicator for this field.

BUG: 448886
FIXED-IN: 5.24